Fix align

--- a/src/styles/modules/template_parts/index/customers.scss
+++ b/src/styles/modules/template_parts/index/customers.scss
@@ -42,5 +42,8 @@
     @media (max-width: 767px) {
       max-width: 200px;
     }
+    img {
+      margin: 0 auto;
+    }
   }
 }
